test_suite/tests/ui/expected-string/byte_string.stderr
error: expected serde rename attribute to be a string: `rename = "..."`
 --> $DIR/byte_string.rs:6:22
  |
6 |     #[serde(rename = b"byte string")]
  |                      ^^^^^^^^^^^^^^

error: aborting due to previous error

