test_suite/tests/ui/expected-string/byte_string.rs
#[macro_use]
extern crate serde_derive;

#[derive(Serialize)]
struct S {
    #[serde(rename = b"byte string")]
    byte_string: (),
}

fn main() {}
